fix on type of rjs

--- a/obvia/index.html
+++ b/obvia/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" async
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script async src="https://kit.fontawesome.com/51294fb9f5.js"></script>
-    <script src="lib/rjs.js"></script>
+    <script type="module" src="lib/rjs.js"></script>
     <script>
         function main() {
 
