carousel slider first commit

--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
             rjs.define("./examples/Header/example.js", "example");
             //rjs.define("./examples/cache/example.js", "api_client_cache");
 
-            rjs.define("./examples/ProductSlider/example.js", "productSliderExample");
+            rjs.define("./examples/CarouselSlider/example.js", "carouselSliderExample");
+
+            // rjs.define("./examples/ProductSlider/example.js", "productSliderExample");
             // rjs.define("./examples/Rating/example.js", "ratingExample");
 
             //rjs.define("./examples/Filter/example.js", "FilterExample");
-            //rjs.define("./examples/ApiClient/example.js", "ApiClientExample");
+            //rjs.define("./epxamples/ApiClient/example.js", "ApiClientExample");
             //rjs.define("./examples/AutoBrowse/example.js", "AutoBrowseExample");
             //rjs.define("./examples/DataBrowse/example.js", "DataBrowseExample");
             //rjs.define("./examples/CurrencyExRate/example.js", "CurrencyExRateExample");
             //rjs.define("./examples/ApiClient/exampleRB.js", "ApiClientExample");
             //rjs.define("./examples/Table/example.js", "TableExample");
-           // rjs.define("./examples/wizard/example.js", "wizardExample");
+        //    rjs.define("./examples/wizard/example.js", "wizardExample");
             //rjs.define("./examples/Validation/example.js", "Validation");
             //rjs.define("./examples/Validation/repeaterExample.js", "Validation");
             //rjs.define("./examples/Validation/rangeValidationExample.js", "RangeValidation");
